# piisa-dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/datasets/: README.md
src/datasets/combined_medical_transcription/: README.md  combined_medical_transcription.ipynb  main.py
src/datasets/customer-support-ticket/: README.md  main.py
src/datasets/customer-transactions/: README.md  main.py
src/datasets/ehrcomplete_icdfiltered/: README.md  ehrcomplete_icdfiltered.ipynb  main.py
src/datasets/healthcare_dataset/: README.md  healthcare_dataset.ipynb  main.py
src/datasets/medical_transcription_4/: README.md  main.py  medical_transcription_4.ipynb
src/datasets/medical_transcription_40/: README.md  main.py  medical_transcription_40.ipynb
src/datasets/medical_transcriptions/: MedicalTranscriptions.ipynb  README.md  main.py
src/datasets/mit-movies-with-inference-example/: README.md  main.py
src/datasets/retail-transaction-dataset/: README.md  main.py
src/datasets/synth_ehr_icd10/: README.md  main.py  synth_ehr_icd10.ipynb
