[tool.poetry]
name = "piisa-dataset"
version = "0.1.0"
description = "This is a repository aiming to add datasets for the PIISA project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
polars = "^1.12.0"
datasets = "^3.1.0"
argilla = "^2.4.0"
black = "^24.10.0"
jsonlines = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
